# kalavai-client

./: .dockerignore  .gitignore  404.html  Dockerfile  MANIFEST.in  README.md  build.sh  faqs.md  getting_started.md  index.html  index.md  nvidia_node.md  objects.inv  publish.sh  pyproject.toml  ray.md  remote_pool.md  sitemap.xml  tags.json  templates.md
.github/workflows/: publish-to-pypi.yml  release.yml
amd_node/: index.html
assets/: apps.yaml  apps_values.yaml  docker-compose-template.yaml  install_client.sh  pool_config_template.yaml  pool_config_values  pool_config_values.yaml  pvc_template.yaml  seed.yaml  service_template.yaml  storage_class_template.yaml  user_workspace.yaml  user_workspace_values.yaml
boinc/: index.html
bootstrap/: index.html
build_specs/: .fpm
choose_job_resources/: index.html
cli/: index.html
cogenai/: custom_params_inference.md  multimodal_inference.md  overview.md  response_metrics.md  text_inference.md  tts_inference.md
cogenai/asr_inference/: index.html
cogenai/custom_params_inference/: index.html
cogenai/image_generation/: index.html
cogenai/multimodal_inference/: index.html
cogenai/overview/: index.html
cogenai/response_metrics/: index.html
cogenai/text_inference/: index.html
cogenai/tts_inference/: index.html
compatibility/: index.html
concepts/: index.html
css/: base.css  geist.css  katex.min.css
css/pygments/: a11y-dark.css  a11y-high-contrast-dark.css  a11y-high-contrast-light.css  a11y-light.css  abap.css  algol.css  algol_nu.css  all.css  arduino.css  autumn.css  blinds-dark.css  blinds-light.css  borland.css  bw.css  coffee.css  colorful.css  default.css  dracula.css  emacs.css  friendly.css  friendly_grayscale.css  fruity.css  github-dark-colorblind.css  github-dark-high-contrast.css  github-dark.css  github-light-colorblind.css  github-light-high-contrast.css  github-light.css  gotthard-dark.css  gotthard-light.css  greative.css  gruvbox-dark.css  gruvbox-light.css  igor.css  inkpot.css  lightbulb.css  lilypond.css  lovelace.css  manni.css  material.css  (+26 more)
developers/: index.html
docker/: README.md  test.py
docker/backend-api/: Dockerfile  README.md
docker/kalavai-runner/: Dockerfile  Dockerfile_amd64  Dockerfile_arm64  README.md  mtu.sh  run_agent.sh
docker/ray-base/: Dockerfile  README.md  download_hf.py  download_model.sh  ray_init.sh
docker/utils/: README.md  (+8 more)
docs/: README.md  mkdocs.yml  requirements.txt
end2end/: index.html
enterprise/: index.html
examples/: README.md  image_generation.md  inference.py  inference_extra_params.py  inference_ollama.py  list_models.py  llm_service_requests.md  multimodal_inference.py  multinode_gpu_vllm.md  quantized_gpu_llm.md  ray_cluster.md  service_requests.py  singlenode_gpu_vllm.md  voxtral_realtime_audio.py
faqs/: index.html
getting_started/: index.html
gui/: .dockerignore  .gitignore  Dockerfile  Dockerfile_gui  README.md  app.py  index.html  items.csv  requirements.txt  rxconfig.py
hosts/: index.html
install/: index.html
install_apps/: index.html
installer/: install_client.sh
join/: index.html
js/: callbacks.js  codexec.js  copy-button.js  dark.js  echarts-style.js  mkdocstrings.js  sidebar.js  slider.js
kalavai_client/: __init__.py  __main__.py  anvil_auth.py  api.py  api_models.py  auth.py  auth_interface.py  bridge_api.py  bridge_models.py  cli.py  cluster.py  core.py  env.py  metrics.py  supabase_auth.py  utils.py
local_cluster/: index.html
local_pool/: index.html
managed/: multitenancy_llm.md  overview.md
nvidia_node/: index.html
petals/: index.html
private_llm_pool/: index.html
public_cluster/: index.html
public_llm_pool/: index.html
public_pool/: index.html
quickstart/: index.html
ray/: index.html
remote_pool/: index.html
scripts/: README.md  amd_readiness.md  apt_connect.sh  cloud_init.sh  install_client.sh  k3d_connect.sh  qcow2.Dockerfile  ubuntu_cuda_node_config.sh  worker_installer_windows.bat  worker_installer_windows.ps1  yum_connect.sh
search/: search_index.json
self_hosted_llm_pool/: index.html
templates/: .gitignore  README.md  index.html
test/: prometheus.sh  server-compose.yaml  test.Dockerfile  test_cli.py  test_cluster.py  worker-compose.yaml
ui/: .dockerignore  .gitignore  Dockerfile  FEATURE_FLAGS.md  README.md  docker-entrypoint.sh  k8s-deployment.yaml  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
use_cases/: fine_tuning.md  gpustack.md  multi_gpu_inference.md
windows_node/: index.html
(+243 files in other folders)
