[tool.poetry]
name        = "kalavai-client"
version     = "0.2.1"
description = "Client app for kalavai platform"
authors     = ["Carlos Fernandez Musoles <carlos@kalavai.net>"]


[tool.poetry.dependencies]
python                          = "> 3.7.2"
requests                        = { version = ">= 2.25" }
mysql-connector-python          = { version = "8.3.0" }
psutil                          = { version = "5.9.8" }
pyyaml                          = { version = "6.0.2" }
rich                            = { version = "13.7.1" }
schedule                        = { version = "1.2.1" }
arguably                        = { version = ">=1.2.5" }
gputil                          = { version = "1.4.0" }
py2app                          = { version = "0.28.7" }
pyinstaller                     = { version = "6.5.0" }
Pillow                          = { version = "10.3.0" }
setuptools                      = { version = "<70.0.0" }
netifaces                       = { version = "0.11.0" }
anvil-uplink                    = { version = "0.5.1" }


[tool.poetry.dev-dependencies]
click = "*"
pre-commit = "*"
black = "*"
xenon = "*"
mypy = "*"
pydocstyle = "*"


[build-system]
requires        = [
    "poetry-core>=1.0.0",
    "setuptools"  # for pip install -e
]
build-backend   = "poetry.core.masonry.api"
