[project]
name            = "kalavai-client"
version         = "0.4.0"
authors = [
  {name = "Carlos Fernandez Musoles", email = "carlos@kalavai.net"}
]
maintainers = [
  {name = "Carlos Fernandez Musoles", email = "carlos@kalavai.net"}
]
description     = "Client app for kalavai platform"
license         = "Apache-2.0"
license-files   = ["LICENSE"]
keywords        = ["LLM", "platform"]
readme          = {file = "README.md", content-type = "text/markdown"}
requires-python = "<3.12"
dependencies = [
    "requests>= 2.25",
    "psutil==5.9.8",
    "jinja2==3.1.4",
    "pyyaml==6.0.2",
    "rich==13.7.1",
    "arguably>=1.2.5",
    "gputil==1.4.0",
    "Pillow==10.3.0",
    "setuptools<70.0.0",
    "netifaces==0.11.0",
    "anvil-uplink==0.5.1"
]

[project.optional-dependencies]
dev = [
    "bumpver",
    "py2app==0.28.7",
    "pyinstaller==6.5.0",
    "build",
    "twine"
]


[project.urls]
Homepage        = "https://platform.kalavai.net"
Website         = "https://kalavai.net"


[build-system]
requires        = [
    "poetry-core>=1.0.0",
    "setuptools"  # for pip install -e
]
build-backend   = "poetry.core.masonry.api"


[project.scripts]
kalavai = "kalavai_client.cli:app"

[tool.bumpver]
current_version = "0.4.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]
"kalavai_client/__init__.py" = ["{version}"]


[tool.check-manifest]
ignore = [".yaml"]
