[project]
name            = "kalavai-client"
version         = "0.6.2"
authors = [
  {name = "Carlos Fernandez Musoles", email = "carlos@kalavai.net"}
]
maintainers = [
  {name = "Carlos Fernandez Musoles", email = "carlos@kalavai.net"}
]
description     = "Client app for kalavai platform"
license         = "Apache-2.0"
license-files   = ["LICENSE"]
keywords        = ["LLM", "platform"]
readme          = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.4"
dependencies = [
    "requests>= 2.25",
    "psutil==5.9.8",
    "jinja2==3.1.4",
    "pyyaml==6.0.2",
    "rich==13.7.1",
    "arguably>=1.2.5",
    "Pillow==10.3.0",
    "setuptools>75.0.0",
    "netifaces==0.11.0",
    "importlib_resources==6.5.2",
    "pydantic==2.10.6",
    "fastapi==0.115.8",
    "uvicorn==0.34.0"
]

[project.optional-dependencies]
dev = [
    "py2app==0.28.7",
    "pyinstaller==6.5.0",
    "build",
    "twine"
]


[project.urls]
Homepage        = "https://platform.kalavai.net"
Website         = "https://kalavai.net"


[build-system]
requires        = [
    "poetry-core>=1.0.0",
    "setuptools"  # for pip install -e
]
build-backend   = "poetry.core.masonry.api"


[project.scripts]
kalavai = "kalavai_client.cli:app"


[tool.setuptools.packages.find]
where = ["kalavai_client"]

[tool.setuptools.package-data]
assets = ["*.yaml", "*.conf"]